--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,14 +4,23 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "notistack": "^3.0.2",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.23.0",
+    "@reduxjs/toolkit": "^2.3.0",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.16",
+    "@mui/material": "^5.15.16",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@mui/system": "^5.15.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
