--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,3 @@
 VITE_CLERK_PUBLISHABLE_KEY='pk_test_c2hhcmluZy1jYXJpYm91LTQyLmNsZXJr LmFjY291bnRzLmRldiQ'
-VITE_API_URL=http://localhost:8081/
+#VITE_API_URL=http://localhost:8081/
+VITE_API_URL=http://localhost:8082/
